force-app/main/default/objects/COMM_ResellerAssortment__c/COMM_ResellerAssortment__c.object-meta.xml
<CustomObject>
    <description>Representes a Reseller Assortment</description>
    <label>Reseller Assortment</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Reseller Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reseller Assortments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>