force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_Account__c.field-meta.xml
<CustomField>
    <fullName>COMM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with the assortment</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Assortments</relationshipLabel>
    <relationshipName>ResellerAssortments</relationshipName>
    <type>Lookup</type>
</CustomField>