force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_Active__c.field-meta.xml
<CustomField>
    <fullName>COMM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If active, the product can be sold by the reseller</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>