force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_AvailableDailyQuantity__c.field-meta.xml
<CustomField>
    <fullName>COMM_AvailableDailyQuantity__c</fullName>
    <description>The quantity the reseller has available to sell of the Product for the current day</description>
    <formula>COMM_DailyLimit__c -  COMM_CurrentDailyQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Daily Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>