force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_CurrentDailyQuantity__c.field-meta.xml
<CustomField>
    <fullName>COMM_CurrentDailyQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The quantity the reseller has sold of the Product for the current day</description>
    <label>Current Daily Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>