force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_DailyCount__c.field-meta.xml
<CustomField>
    <fullName>COMM_DailyCount__c</fullName>
    <description>Quantity of the product purchased by the reseller on the current day.</description>
    <label>Daily Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>