force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_DailyLimit__c.field-meta.xml
<CustomField>
    <fullName>COMM_DailyLimit__c</fullName>
    <description>Maximum daily sales limit</description>
    <label>Daily Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>