force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_PriceBook__c.field-meta.xml
<CustomField>
    <fullName>COMM_PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reseller price catalog</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Reseller Assortments</relationshipLabel>
    <relationshipName>ResellerAssortments</relationshipName>
    <type>Lookup</type>
</CustomField>