force-app/main/default/objects/COMM_ResellerAssortment__c/fields/COMM_Product__c.field-meta.xml
<CustomField>
    <fullName>COMM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product to be sold by reseller</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reseller Assortments</relationshipLabel>
    <relationshipName>ResellerAssortments</relationshipName>
    <type>Lookup</type>
</CustomField>