force-app/main/default/objects/COMM_ResellerAssortment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COMM_Active__c</columns>
    <columns>COMM_Account__c</columns>
    <columns>COMM_Product__c</columns>
    <columns>COMM_PriceBook__c</columns>
    <columns>COMM_DailyLimit__c</columns>
    <columns>COMM_AvailableDailyQuantity__c</columns>
    <columns>COMM_CurrentDailyQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>